--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./scripts/composer-char-counter.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+        <span class="logo">tweeter</span>
+        <button class="description"><strong>Write</strong> a new tweet</button>
+
     </nav>
+    <header class="header">
+        <div class="avatar">
+            <img src="/images/profile-hex.png">
+        </div>
+        <br>
+        <div class="avatar-name">
+            <h2>Fatima Sajadi</h2>
+        </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
-  </body>
+    <main class="container">
+        <div>
+            <p class="error"></p>
+        </div>
+        <section class="new-tweet">
+            <form class="tweet-form" method="POST" action="/tweets/">
+                <label class="tweet-label" for="tweet-text"><strong>What are you humming about?</strong></label>
+                <textarea class="tweet-textarea" name="text" id="tweet-text"></textarea>
+                <div class="button-parrent">
+                    <button class="tweet-button" type="submit">Tweet</button>
+                    <output name="counter" class="counter" for="tweet-text"><strong>140 </strong></output>
+                </div>
+            </form>
+        </section>
+
+
+        <section class="tweet-container">
+
+        </section>
+
+
+    </main>
+</body>
+
 </html>
