Implement automatic scroll top button

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
 </head>
+<div class="floatScroll">
+    <img src="/images/arrow-up.png"></img>
+</div>
 
 <body>
     <!-- Top nav bar (fixed) -->
