--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <section class="new-tweet">
             <form class="tweet-form" method="POST" action="/tweets/">
                 <label class="tweet-label" for="tweet-text"><strong>What are you humming about?</strong></label>
-                <textarea autofocus class="tweet-textarea" name="text" id="tweet-text"></textarea>
+                <textarea class="tweet-textarea" name="text" id="tweet-text"></textarea>
                 <div class="button-parrent">
                     <button class="tweet-button" type="submit">Tweet</button>
                     <output name="counter" class="counter" for="tweet-text"><strong>140 </strong></output>
